# stock_prediction

./: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
app/: main.py
data/: model.pkl  raw_stock_prices.csv  stock_features.csv
notebooks/: model_development.ipynb
scripts/: data_ingestion.py  data_preparation.py  stocks_api.py
